# open-rival

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GFX.md  MAPS.md  Open-Rival.sln  README.md  SOUNDS.md  create_vs_solution.bat  vcpkg.json
projects/Open-Rival/: .gitignore  CMakeLists.txt  Open-Rival.aps  Open-Rival.vcxproj  Open-Rival.vcxproj.filters  README.md  config.json  resource.h
projects/Open-Rival/include/: Animations.h  Application.h  ApplicationContext.h  AtlasRenderable.h  AudioSystem.h  AudioUtils.h  BinaryFileReader.h  Building.h  BuildingAnimationComponent.h  BuildingDef.h  BuildingPropsComponent.h  Camera.h  Cursor.h  Entity.h  EntityComponent.h  EntityFactory.h  EntityRenderer.h  EnumUtils.h  FacingComponent.h  FileUtils.h  FlyerComponent.h  Font.h  Framebuffer.h  FramebufferRenderer.h  GLUtils.h  GameCommand.h  GameInterface.h  GameRenderer.h  GameState.h  Image.h  InputUtils.h  InventoryComponent.h  JsonUtils.h  MapBorderRenderer.h  MapUtils.h  MathUtils.h  MenuTextRenderer.h  MidiFile.h  MidsDecoder.h  MouseHandlerComponent.h  (+44 more)
projects/Open-Rival/include/application/: Application.h  ApplicationContext.h  ResourceLoader.h  Resources.h  State.h  Window.h
projects/Open-Rival/include/audio/: AudioSystem.h  AudioUtils.h  MidiContainer.h  MidiFile.h  MidiPlayer.h  MidsDecoder.h  SoundSource.h  Sounds.h  WaveFile.h
projects/Open-Rival/include/commands/: AttackCommand.h  GameCommand.h  GameCommandFactory.h  MoveCommand.h
projects/Open-Rival/include/entity/: Building.h  Decoration.h  Effect.h  Entity.h  EntityFactory.h  EntityRenderer.h  Palisade.h  Projectile.h  Unit.h
projects/Open-Rival/include/game/: Animations.h  AttackDef.h  AttackUtils.h  BuildingDef.h  BuildingType.h  DamageUtils.h  EffectDef.h  GameInterface.h  GameState.h  InventoryComponent.h  MapUtils.h  MousePicker.h  PathUtils.h  Pathfinding.h  PlayerContext.h  PlayerState.h  ProjectileDef.h  Race.h  SpatialIndex.h  Tile.h  Unit.h  UnitDef.h  UnitType.h  World.h
projects/Open-Rival/include/gfx/: Camera.h  Color.h  Font.h  Framebuffer.h  GLUtils.h  GlewWrapper.h  Image.h  Palette.h  PaletteUtils.h  RenderUtils.h  Renderer.h  ShaderUtils.h  Shaders.h  Spritesheet.h  Texture.h  TextureAtlas.h  TextureRenderable.h
projects/Open-Rival/include/lobby/: LobbyState.h
projects/Open-Rival/include/main/: ProgramOptions.h
projects/Open-Rival/include/net/: ClientInfo.h  Connection.h  NetUtils.h  Packet.h  PacketFactory.h  Server.h  Socket.h
projects/Open-Rival/include/platform/: WindowsWrapper.h
projects/Open-Rival/include/scenario/: ScenarioBuilder.h  ScenarioData.h  ScenarioReader.h
projects/Open-Rival/include/ui/: CursorRenderer.h  MenuRenderer.h
projects/Open-Rival/include/utils/: BufferUtils.h  CollectionUtils.h  ConfigUtils.h  EntityUtils.h  EnumUtils.h  FileUtils.h  HashUtils.h  InputUtils.h  JsonUtils.h  LogUtils.h  MouseUtils.h  SDLWrapper.h  StringUtils.h  TimeUtils.h
projects/Open-Rival/res/data/: units.json
projects/Open-Rival/res/shaders/: font.frag  font.vert  indexed_texture.frag  menu.frag  menu.vert  texture.vert
projects/Open-Rival/src/: Animations.cpp  Application.cpp  ApplicationContext.cpp  AtlasRenderable.cpp  AudioSystem.cpp  AudioUtils.cpp  BinaryFileReader.cpp  Building.cpp  BuildingAnimationComponent.cpp  BuildingDef.cpp  BuildingPropsComponent.cpp  Camera.cpp  Color.cpp  Cursor.cpp  Entity.cpp  EntityComponent.cpp  EntityFactory.cpp  EntityRenderer.cpp  FacingComponent.cpp  FileUtils.cpp  FlyerComponent.cpp  Font.cpp  Framebuffer.cpp  FramebufferRenderer.cpp  GLUtils.cpp  GameCommand.cpp  GameInterface.cpp  GameRenderer.cpp  GameState.cpp  Image.cpp  InputUtils.cpp  InventoryComponent.cpp  JsonUtils.cpp  Main.cpp  MapBorderRenderer.cpp  MapUtils.cpp  MathUtils.cpp  MenuTextRenderer.cpp  MidiContainer.cpp  MidiFile.cpp  (+49 more)
projects/Open-Rival/src/application/: Application.cpp  ApplicationContext.cpp  PathUtils.cpp  ResourceLoader.cpp  Resources.cpp  State.cpp  Window.cpp
projects/Open-Rival/src/audio/: AudioSystem.cpp  AudioUtils.cpp  MidiContainer.cpp  MidiFile.cpp  MidiPlayer.cpp  MidsDecoder.cpp  SoundSource.cpp  Sounds.cpp  WaveFile.cpp
projects/Open-Rival/src/commands/: AttackCommand.cpp  GameCommand.cpp  GameCommandFactory.cpp  MoveCommand.cpp
projects/Open-Rival/src/entity/: Building.cpp  Decoration.cpp  Effect.cpp  Entity.cpp  EntityFactory.cpp  EntityRenderer.cpp  Palisade.cpp  Projectile.cpp  Unit.cpp
projects/Open-Rival/src/game/: Animations.cpp  AttackDef.cpp  AttackUtils.cpp  Building.cpp  BuildingDef.cpp  EffectDef.cpp  GameInterface.cpp  GameState.cpp  InventoryComponent.cpp  MapUtils.cpp  MousePicker.cpp  PathUtils.cpp  Pathfinding.cpp  PlayerContext.cpp  PlayerState.cpp  ProjectileDef.cpp  SpatialIndex.cpp  Tile.cpp  UnitDef.cpp  World.cpp
projects/Open-Rival/src/gfx/: Camera.cpp  Color.cpp  Font.cpp  Framebuffer.cpp  GLUtils.cpp  Image.cpp  Palette.cpp  PaletteUtils.cpp  (+8 more)
projects/audio-extractor/: .gitignore  CMakeLists.txt  Main.cpp  README.md  audio-extractor.vcxproj  audio-extractor.vcxproj.filters
projects/campaign-extractor/: .gitignore  CMakeLists.txt  Main.cpp  README.md  campaign-extractor.cpp  campaign-extractor.vcxproj
projects/image-extractor/: .gitignore  CMakeLists.txt  Main.cpp  README.md  convert_palette.py  image-extractor.vcxproj  image-extractor.vcxproj.filters  palette-game.act  palette-hire-troops.act  palette-loading.act  palette-title.act
projects/interface-extractor/: .gitignore  CMakeLists.txt  Main.cpp  README.md  interface-extractor.vcxproj  interface-extractor.vcxproj.filters
projects/setup/: .gitignore  CMakeLists.txt  README.md  setup.vcxproj  setup.vcxproj.filters
projects/setup/include/: ImageGen.h  image-extractor.h  interface-extractor.h  registry.h  setup-utils.h  texture-builder.h
projects/setup/src/: ImageGen.cpp  Main.cpp  audio-extractor.cpp  image-extractor.cpp  interface-extractor.cpp  registry.cpp  setup-utils.cpp  texture-builder.cpp
projects/texture-builder/: .gitignore  CMakeLists.txt  Main.cpp  README.md  texture-builder.vcxproj  texture-builder.vcxproj.filters
(+913 files in other folders)
